# Wikipedia_Rag

./: README.md  data_procssesing.ipynb  pages.ipynb  scripting.ipynb
Wikipidea-Rag/: pyproject.toml
Wikipidea-Rag/.tmp_dagster_home_6wh9c9li/history/: runs.db
Wikipidea-Rag/.tmp_dagster_home_6wh9c9li/history/runs/: index.db
Wikipidea-Rag/.tmp_dagster_home_6wh9c9li/schedules/: schedules.db
Wikipidea-Rag/.tmp_dagster_home_xhisihgb/history/: runs.db
Wikipidea-Rag/.tmp_dagster_home_xhisihgb/history/runs/: index.db
Wikipidea-Rag/.tmp_dagster_home_xhisihgb/schedules/: schedules.db
Wikipidea-Rag/.tmp_dagster_home_yeg8hgyl/history/: runs.db
Wikipidea-Rag/.tmp_dagster_home_yeg8hgyl/history/runs/: 71c990a1-b3e8-436d-8c5f-c240f23fe17b.db  879eb507-4881-4425-a36c-23ad22c9ebc0.db  c4fea502-dca3-4bac-8312-3dd758eccb93.db  f9e2b70b-fff1-4424-827b-7f14af5aae8f.db  index.db
Wikipidea-Rag/.tmp_dagster_home_yeg8hgyl/schedules/: schedules.db
Wikipidea-Rag/wikipedia_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Wikipidea-Rag/wikipidea_rag/: asset_functions.py  assets.py  definitions.py  resources.py
